--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "workout-tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -22,7 +22,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.10.15",
-    "morgan": "^1.10.0",
-    "mongojs": "3.1.0"
+    "morgan": "^1.10.0"
   }
 }
